--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ shapely==2.0.1
 requests==2.31.0
 scikit-learn==1.7.0
 gunicorn==21.2.0
-setuptools>=42
-numpy>=1.26
+setuptools>=65.0
+numpy==1.24.3
 wheel
+
 
