--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-flask==2.3.2
-flask-cors==4.0.0
-osmnx==1.6.0
-networkx==3.1
-numpy==1.24.3
+flask>=2.0.0,<3.0.0
+flask-cors>=3.0.0
+osmnx>=1.0.0,<2.0.0
+networkx>=2.5,<3.0
+numpy>=1.21.0,<2.0.0
+setuptools>=65.5.1
+scikit-learn==1.7.0
 geopandas==0.13.2
 shapely==2.0.1
 requests==2.31.0
-scikit-learn==1.7.0
 gunicorn==21.2.0
-
-
 
