--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-flask>=2.0.0,<3.0.0
-flask-cors>=3.0.0
-osmnx>=1.0.0,<2.0.0
-networkx>=2.5,<3.0
-numpy>=1.21.0,<2.0.0
-setuptools>=65.5.1
+flask==2.0.3
+flask-cors==3.0.10
+osmnx==1.3.1
+networkx==2.6.3
+numpy==1.21.6
+shapely==1.8.2
+geopandas==0.10.2
+pyproj==3.3.1
 scikit-learn==1.7.0
-geopandas==0.13.2
-shapely==2.0.1
 requests==2.31.0
 gunicorn==21.2.0
+setuptools>=65.5.1
+
+
 
