--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,8 @@
-flask==2.0.3
-flask-cors==3.0.10
-osmnx==1.3.1
-networkx==2.6.3
-numpy==1.21.6
-shapely==1.8.2
-geopandas==0.10.2
-pyproj==3.3.1
+Flask==3.1.0
+flask-cors==6.0.1
+networkx==3.1
+numpy==2.2.5
+osmnx==1.6.0
 scikit-learn==1.7.0
-requests==2.31.0
 gunicorn==21.2.0
-setuptools>=65.5.1
-
-
 
